TestSuite/errors/err0055.pas
const a : integer = 4;

procedure Test(var a : integer);
begin

end;

begin
Test(a);
end.